--- a/public/display.html
+++ b/public/display.html
@@ -109,8 +109,8 @@
         }
 
         .table-row.active {
-            background: rgba(46, 204, 113, 0.9);
-            color: white;
+            background: rgba(255,255,255,0.95);
+            color: #2c3e50;
             border-left: 5px solid #27ae60;
             animation: pulse-active 2s infinite;
         }
@@ -254,7 +254,7 @@
 
         /* Status Colors */
         .active .queue-number {
-            color: white;
+            color: #2c3e50;
         }
 
         .inactive .queue-number {
@@ -262,7 +262,7 @@
         }
 
         .active .channel-name {
-            color: white;
+            color: #2c3e50;
         }
 
         .inactive .channel-name {
@@ -270,7 +270,7 @@
         }
 
         .active .call-time {
-            color: white;
+            color: #2c3e50;
         }
 
         .inactive .call-time {
