--- a/public/display.html
+++ b/public/display.html
@@ -317,7 +317,7 @@
         </div>
 
         <div class="footer">
-            <p>⚡ อัปเดตแบบ Real-time | สุดท้าย: <span id="lastUpdate">-</span></p>
+            <p>⚡ อัปเดตแบบ Real-time</p>
             <div class="sound-control">
                 <div class="sound-toggle" id="soundToggle" onclick="toggleSound()">
                     <span class="sound-icon" id="soundIcon">🔊</span>
